@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-09-12T08:33:43Z",
-  "count_outdated" : 774,
-  "uniques_outdated" : 404,
+  "timestamp" : "2022-09-13T02:38:44Z",
+  "count_outdated" : 775,
+  "uniques_outdated" : 405,
   "count" : 796,
   "uniques" : 417,
   "clones" : [
     {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
