@@ -1,15 +1,10 @@
 {
-  "count": 22,
+  "count": 21,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -59,7 +54,7 @@
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
