@@ -1,3 +1,11 @@
+2022-09-13T02:38:44Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3041985002
+* notice: last 14d: unq all: 3 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 404 774 / 417 796
+* notice: next accum: outdated-unq outdated-all / unq all: 405 775 / 417 796
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-08-29] / [2022-08-30 2022-09-12]
+
 2022-09-12T08:33:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3035790105
 * notice: last 14d: unq all: 3 22
